Removed bug with h2 textalign.

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ a {
     color: #ffffff;
 }
 
-h2, h3, h4, h5, h6 {
+h3, h4, h5, h6 {
     font-family: "Roboto", sans-serif;
     color: #ffffff;
     text-align: center;
